--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "react-homework-template",
+    "name": "goit-react-hw-02-feedback",
     "version": "0.1.0",
-    "private": true,
+
     "homepage": "https://Nesterenko-Artem.github.io/goit-react-hw-02-phonebook/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.3",
