--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "goit-react-hw-02-feedback",
     "version": "0.1.0",
-
     "homepage": "https://Nesterenko-Artem.github.io/goit-react-hw-02-phonebook/",
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "modern-normalize": "^1.1.0",
+        "nanoid": "^4.0.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-scripts": "5.0.1",
